src/test/deca/syntax/invalid/testTab.deca
// Description:
//   test tabulations
//
// Resultats:
//    lignes 8 et 9 : Erreur
//
{
 \n
 \t

}
